# zephyr-without-west

./: .gitignore  README.md  install-pure-bash.sh  install.ps1  install.sh
docs/: 01-setup-environment.md  02-create-application.md
docs/old-files-for-reference/: build.sh
samples/ledpattern/: CMakeLists.txt  README.md  build.sh  prj.conf
samples/ledpattern/boards/: ek_ra8m1.dts.txt  ek_ra8m1.overlay  pattern.dts.txt  rsk_rx130.overlay
samples/ledpattern/renode/: compose.yml  docker_run_sim_ek_ra8m1.sh  ek_ra8m1.resc  nrf52840dk.resc
samples/ledpattern/src/: main.c
samples/template/: CMakeLists.txt  README.md  prj.conf
samples/template-app/: CMakeLists.txt  build.sh
samples/template/src/: main.c
scripts/linux/: parse_build_args.sh
scripts/share/: ensure_zephyr_installation.py  get_latest_zephyr_version.py  install_zephyrww.py
scripts/windows/: parse_build_args.ps1
